package com.fluxfinanciers.enums;

public enum ActionAudit {
    CREATION,
    MODIFICATION,
    SUPPRESSION
}