package com.fluxfinanciers.enums;

public enum CategorieCharge {
    VEHICULES,
    INFRASTRUCTURE,
    FISCALES_SOCIALES,
    SERVICES_EXTERNES
}