package com.fluxfinanciers.enums;

public enum ModePaiement {
    VIREMENT,
    ESPECES,
    CHEQUE,
    CARTE
}

