package com.fluxfinanciers.enums;

public enum Role {
    ADMIN,
    GESTIONNAIRE
}
