package com.fluxfinanciers.enums;

/*
 Énumération du statut d'un employé
 */
public enum StatutEmploye {
   ACTIF,
   INACTIF
}