package com.fluxfinanciers.enums;

public enum TypePaiement {
    SALAIRE,
    PRIME
}